image/problem 테이블 스키마 변경 및 관련 코드 수정